--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -262,6 +262,11 @@ transition: .25s;
     
 }
 
+.type, .case{
+    display: none;
+}
+
+
 
 @media only screen and (max-width: 600px) {
     .top-bar-title{
